Made navbar more accessible on mobile. Fixed hitboxes on CrossyRoad

--- a/frontend/src/components/mini-games/crossy-road/CrossyRoad.css
+++ b/frontend/src/components/mini-games/crossy-road/CrossyRoad.css
@@ -85,6 +85,7 @@
 /* ─────────────── Player ─────────────── */
 
 .player-container {
+  background-color: rgb(238, 227, 227);
   position: absolute;
   width: var(--tile-size);
   height: var(--tile-size);
